@@ -1,5 +1,11 @@
 2007-12-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	Submitted by Bill Johnson
+	bug #19669: Need function to read signature row
+	* include/avr/boot.h (boot_signature_byte_get): Add new macro.
+
+2007-12-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* tests/simulate/runtest.sh: replace /bin/bash by /bin/sh as the
 	really generic name of the shell to invoke.  Not every system has
 	bash in /bin.
